FEAT(services): add follow ups and services flow
